--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -2,10 +2,18 @@
     <head>
         <title>Minha Página</title>
         <body>
-            <h1>Olá Mundo! </h1>
-            <p>Bem-Vindo!!</p>
-            <p>Este é um exemplo básico de HTML</p>
-
+            <table>
+                <tr>
+                    <td style="background-color:chartreuse"></td>
+                    <h1>Olá Mundo! </h1>
+                    <p>Bem-Vindo!!</p>
+                    </td>
+                    <td>
+                    <td style="background-color:aqua"></td>
+                    <p>Este é um exemplo básico de HTML</p>
+                    </td>
+                </tr>
+            </table>
         </body>
     </head>
 </html>
