--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -4,12 +4,12 @@
         <body>
             <table>
                 <tr>
-                    <td style="background-color:chartreuse"></td>
+                    <td style="background-color:chartreuse">
                     <h1>Olá Mundo! </h1>
                     <p>Bem-Vindo!!</p>
                     </td>
                     <td>
-                    <td style="background-color:aqua"></td>
+                    <td style="background-color:aqua">
                     <p>Este é um exemplo básico de HTML</p>
                     </td>
                 </tr>
