--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -1,19 +1,33 @@
 <html>
-    <head>
-        <title>Minha Página</title>
-        <body>
-            <table>
-                <tr>
-                    <td style="background-color:chartreuse">
-                    <h1>Olá Mundo! </h1>
-                    <p>Bem-Vindo!!</p>
-                    </td>
-                    <td>
-                    <td style="background-color:aqua">
-                    <p>Este é um exemplo básico de HTML</p>
-                    </td>
-                </tr>
-            </table>
-        </body>
-    </head>
+<head>
+    <!-- Informações gerais da página -->
+    <title>Minha página</title>
+</head>
+<body>
+    <!-- Corpo da nossa pagina -->
+    <header>
+        <!-- Topo da nossa página -->
+        <h1>Meu Site</h1>
+    </header>
+
+    <nav>
+        <!-- Onde montamos o nosso menu -->
+        <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#Sobre">Sobre</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+    <section><!--é uma tag de agrupamento de conteúdo-->
+        <article><!--escrever um artigo-->
+            <h2>Bem- Vindo ao artigo</h2>
+            <p>Este é um exemplo de conteúdo em uma tag de artigo.</p>
+        </article>
+    </section>
+
+    <footer>
+        <!-- É rodapé da nossa página -->
+        <h1>Rodape</h1>
+    </footer>
+</body>
 </html>
