--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -2,6 +2,7 @@
 <head>
     <!-- Informações gerais da página -->
     <title>Minha página</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <!-- Corpo da nossa pagina -->
@@ -23,6 +24,34 @@
             <h2>Bem- Vindo ao artigo</h2>
             <p>Este é um exemplo de conteúdo em uma tag de artigo.</p>
         </article>
+    </section>
+    <section>
+        <div>
+            <video controls>
+                <source src="video.mp4" type="video/mp4">
+            </video>
+        </div>
+        <div>
+            <audio controls> 
+            <source src="audio.mp3" type="audio/mp3">
+            </audio>
+        </div>
+        <div>
+            <img> 
+            <source src="audio.mp3" type="audio/mp3">
+            </img>
+        </div>
+    </section>
+    <section>
+        <form>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome"><br><br>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="age">Idade:</label>
+            <input type="number" id="age" name="age"><br><br>
+            <button type="subimit">Enviar</button>
+        </form>
     </section>
 
     <footer>
