--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -28,18 +28,17 @@
     <section>
         <div>
             <video controls>
-                <source src="video.mp4" type="video/mp4">
+                <source src="\video\video.mp4" type="video/mp4">
             </video>
         </div>
         <div>
             <audio controls> 
-            <source src="audio.mp3" type="audio/mp3">
+            <source src="\audio\audio.mp3" type="audio/mp3">
             </audio>
         </div>
         <div>
             <img> 
-            <source src="audio.mp3" type="audio/mp3">
-            </img>
+            <source src="\images\logo.jpg" type="image/jpg">
         </div>
     </section>
     <section>
