--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -28,17 +28,19 @@
     <section>
         <div>
             <video controls>
-                <source src="\video\video.mp4" type="video/mp4">
+                <source src="video\video.mp4" type="video/mp4">
             </video>
         </div>
         <div>
             <audio controls> 
-            <source src="\audio\audio.mp3" type="audio/mp3">
+            <source src="audio\audio.mp3" type="audio/mp3">
             </audio>
         </div>
         <div>
-            <img> 
-            <source src="\images\logo.jpg" type="image/jpg">
+            <picture>
+                <source srcset="images/logo.jpg" type="image/jpg">
+                <img src="images/logo.jpg" alt="Logo">
+            </picture>
         </div>
     </section>
     <section>
