--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!-- Informações gerais da página -->
-    <title>Minha página</title>
+    <title>Portifólio Guilherme de Araujo Barbosa</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
