--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <!-- Informações gerais da página -->
-    <title>Portifólio Guilherme de Araujo Barbosa</title>
+    <title>Portifólio Guilherme Barbosa</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <!-- Corpo da nossa pagina -->
     <header>
         <!-- Topo da nossa página -->
-        <h1>Portifólio Guilherme de Araujo Barbosa</h1>
+        <h1>Portifólio Guilherme Barbosa</h1>
     </header>
 
     <nav>
