--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -13,7 +13,7 @@
         <section>
             <div>
                 <picture>
-                     <img src="images/guilherme.jpg" alt="Logo" width="250" height="330">
+                     <img src="images/guilherme.png" alt="Logo" width="250" height="330">
                 </picture>
             </div>
         </section>
