--- a/AULA_01/index.html
+++ b/AULA_01/index.html
@@ -13,13 +13,13 @@
         <section>
             <div>
                 <picture>
-                     <img src="images/guilherme.png" alt="Logo" width="250" height="330">
+                     <img src="images/guilherme.png" alt="Logo" width="350">
                 </picture>
             </div>
         </section>
     </header> 
     <section><!--é uma tag de agrupamento de conteúdo-->
-        <div class="artigo">
+        <div class="artigo"> 
         <article><!--escrever um artigo-->
             <br> <br><br><h2>Bem- Vindo ao meu Portifólio</h2><br>
             <p>Ao longo de 9 anos, adquiri experiência prática como Empreendedor, Coordenador de Ecommerce e Assistente de Marketing. Com um sólido conhecimento em gestão de sistemas ERP, participei diretamente de implantações, configurações e integrações de Lojas Virtuais e Marketplaces (como Mercado Livre, Shopee, Amazon entre outros). Através de chamados, colaborei com o desenvolvimento e melhorias de algumas plataformas Hub, realizando testes de usabilidade, identificando eventuais bugs, sugerindo idéias de melhorias e experiência. Minha expertise inclui também a resolução de problemas sistêmicos, logísticos e pós vendas, onde trabalhei para otimizar processos e garantir resultados eficientes.</p>
@@ -46,7 +46,6 @@
         </div>
     </section>
     
-
     <footer class="footer">
         <!-- É rodapé da nossa página -->
         <h1>Obrigado por visitar meu portifólio!</h1>
