--- a/AULA_02/index.html
+++ b/AULA_02/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Calculadora</title>
 </head>
 <body>
@@ -11,37 +12,37 @@
     <div class="calculator">
         <table>
             <tr>
-                <td>
-                    ><input type="text" id="display" readonly>
+                <td colspan="4">
+                    <input type="text" id="display" readonly>
                 </td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><button>C</button></td>
+                <td><button>CE</button></td>
+                <td><button>&divide;</button></td>
+                <td><button>&times;</button></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><button>7</button></td>
+                <td><button>8</button></td>
+                <td><button>9</button></td>
+                <td><button>-</button></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><button>4</button></td>
+                <td><button>5</button></td>
+                <td><button>6</button></td>
+                <td><button>+</button></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td><button>1</button></td>
+                <td><button>2</button></td>
+                <td><button>3</button></td>
+                <td rowspan="2"><button>=</button></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td colspan="2"><button>0</button></td>
+                <td><button>.</button></td>
             </tr>
         </table>
     </div>
