--- a/AULA_02/index.html
+++ b/AULA_02/index.html
@@ -17,32 +17,32 @@
                 </td>
             </tr>
             <tr>
-                <td><button>C</button></td>
-                <td><button>CE</button></td>
-                <td><button>&divide;</button></td>
-                <td><button>&times;</button></td>
+                <td><button class="calculatorButtons">C</button></td>
+                <td><button class="calculatorButtons">CE</button></td>
+                <td><button class="calculatorButtons">&divide;</button></td> 
+                <td><button class="calculatorButtons">&times;</button></td>
             </tr>
             <tr>
-                <td><button>7</button></td>
-                <td><button>8</button></td>
-                <td><button>9</button></td>
-                <td><button>-</button></td>
+                <td><button class="calculatorButtons">7</button></td>
+                <td><button class="calculatorButtons">8</button></td>
+                <td><button class="calculatorButtons">9</button></td>
+                <td><button class="calculatorButtons">-</button></td>
             </tr>
             <tr>
-                <td><button>4</button></td>
-                <td><button>5</button></td>
-                <td><button>6</button></td>
-                <td><button>+</button></td>
+                <td><button class="calculatorButtons">4</button></td>
+                <td><button class="calculatorButtons">5</button></td>
+                <td><button class="calculatorButtons">6</button></td>
+                <td><button class="calculatorButtons">+</button></td>
             </tr>
             <tr>
-                <td><button>1</button></td>
-                <td><button>2</button></td>
-                <td><button>3</button></td>
-                <td rowspan="2"><button>=</button></td>
+                <td><button class="calculatorButtons">1</button></td>
+                <td><button class="calculatorButtons">2</button></td>
+                <td><button class="calculatorButtons">3</button></td>
+                <td rowspan="2"><button class="calculatorButtons">=</button></td>
             </tr>
             <tr>
-                <td colspan="2"><button>0</button></td>
-                <td><button>.</button></td>
+                <td colspan="2"><button class="calculatorButtons">0</button></td>
+                <td><button class="calculatorButtons">.</button></td>
             </tr>
         </table>
     </div>
