--- a/AULA_02/index.html
+++ b/AULA_02/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
+    
     <title>Calculadora</title>
 </head>
 <body>
@@ -17,32 +22,32 @@
                 </td>
             </tr>
             <tr>
-                <td><button class="calculatorButtons">C</button></td>
-                <td><button class="calculatorButtons">CE</button></td>
-                <td><button class="calculatorButtons">&divide;</button></td> 
-                <td><button class="calculatorButtons">&times;</button></td>
+                <td><button class="calculatorButtons" id="cleanDisplay" value="C">C</button></td>
+                <td><button class="calculatorButtons" id="deleteDigit" value="CE">CE</button></td>
+                <td><button class="calculatorButtons" id="division" value="/">&divide;</button></td> 
+                <td><button class="calculatorButtons" id="mutiplication" value="*">&times;</button></td>
             </tr>
             <tr>
-                <td><button class="calculatorButtons">7</button></td>
-                <td><button class="calculatorButtons">8</button></td>
-                <td><button class="calculatorButtons">9</button></td>
-                <td><button class="calculatorButtons">-</button></td>
+                <td><button class="calculatorButtons" id="num7" value="7">7</button></td>
+                <td><button class="calculatorButtons" id="num8" value="8">8</button></td>
+                <td><button class="calculatorButtons" id="num9" value="9">9</button></td>
+                <td><button class="calculatorButtons" id="subtraction" value="-">-</button></td>
             </tr>
             <tr>
-                <td><button class="calculatorButtons">4</button></td>
-                <td><button class="calculatorButtons">5</button></td>
-                <td><button class="calculatorButtons">6</button></td>
-                <td><button class="calculatorButtons">+</button></td>
+                <td><button class="calculatorButtons" id="num4" value="4">4</button></td>
+                <td><button class="calculatorButtons" id="num5" value="5">5</button></td>
+                <td><button class="calculatorButtons" id="num6" value="6">6</button></td>
+                <td><button class="calculatorButtons" id="sum" value="+">+</button></td>
             </tr>
             <tr>
-                <td><button class="calculatorButtons">1</button></td>
-                <td><button class="calculatorButtons">2</button></td>
-                <td><button class="calculatorButtons">3</button></td>
-                <td rowspan="2"><button class="calculatorButtons">=</button></td>
+                <td><button class="calculatorButtons" id="num1" value="1">1</button></td>
+                <td><button class="calculatorButtons" id="num2" value="2">2</button></td>
+                <td><button class="calculatorButtons" id="num3" value="3">3</button></td>
+                <td rowspan="2"><button class="calculatorButtons" id="result" value="=">=</button></td>
             </tr>
             <tr>
-                <td colspan="2"><button class="calculatorButtons">0</button></td>
-                <td><button class="calculatorButtons">.</button></td>
+                <td colspan="2"><button class="calculatorButtons " id="num0" value="0">0</button></td>
+                <td><button class="calculatorButtons" id="point" value=".">.</button></td>
             </tr>
         </table>
     </div>
