--- a/TESTE/index.html
+++ b/TESTE/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
-
     <title>Calculadora</title>
 </head>
 <body>
@@ -46,10 +45,13 @@
                 <td rowspan="2"><button class="calculatorButtons" id="result" value="=">=</button></td>
             </tr>
             <tr>
+              
                 <td colspan="2"><button class="calculatorButtons" id="num0" value="0">0</button></td>
                 <td><button class="calculatorButtons" id="point" value=".">.</button></td>
+                </td>
             </tr>
         </table>
+        
     </div>
 </div>
 </body>
